# EchoRunner

./: .gitignore  EchoRunner.spec  FILE_INDEX.md  README.md  README_FIRST_RUN.txt  pyproject.toml  requirements.txt
Resources/: hci-study-toolkit-formal-documentation.md
Versions/EchoRunner_00_30_Jun_11_FIXED_README/: .gitignore
assetLibrary/: README.md  manifest.json
config/: audio_profiles.yaml  defaults.yaml  keybindings.yaml
data/: settings.json  user_settings.json
docs/: 01_PROJECT_MASTERPLAN_ARCHITECTURE.md  02_TECH_STACK_PYGAME_OPENAL_REPOSITORY_SETUP.md  03_GAME_WORKFLOW_BEHAVIOUR_STATE_MACHINE.md  04_GAME_CORE_SIMULATION_LEVEL_DESIGN.md  05_INPUT_ACCESSIBILITY_MENUS_TUTORIAL.md  06_OPENAL_PYGAME_SPATIAL_AUDIO_IMPLEMENTATION.md  07_AUDIO_GRAMMAR_CUE_SYSTEM_SOUND_LIBRARY.md  08_PLAYER_CONTROLS_GOALS_ONBOARDING_SCRIPT.md  09_VISUAL_ASSET_LIBRARY_TRAINER_UI.md  10_ENEMY_AI_FAIRNESS_TELEMETRY.md  11_CROSS_OS_BUILD_EXPORT_PACKAGING.md  12_TESTING_QA_RESEARCH_PROTOCOL_RUN_COMMANDS.md
levels/: level_01_training_loop.json  level_02_crossroads.json  level_03_power_route.json  level_04_double_loop.json
scripts/: dev_run.bat  dev_run.ps1  dev_run.sh  run_audio_test.sh  run_game.bat  run_game.ps1  run_game.sh  run_tests.sh  setup_openal.py  setup_venv.ps1  setup_venv.sh  validate_assets.py  validate_audio_manifest.py  validate_levels.py
skills/karpathy/: SKILL.md
soundLibrary/: README.md  manifest.json  speech_manifest.json
src/echorunner/: app.py  (+2 more)
studyKit/: README.md
tests/: check_assets.py
wav_converter/: .env.example  convert.py  requirements.txt
(+106 files in other folders)
