[project]
name = "echorunner"
version = "0.1.0"
description = "Blind-first Python/Pygame sound-maze game with OpenAL spatial audio"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.0",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "pydantic>=2.7",
    "rich>=13.7",
    "platformdirs>=4.2",
]

[project.scripts]
echorunner = "echorunner.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyinstaller>=6.0",
]
